docs-archive/apache-airflow-providers-standard/1.5.0/_sources/_api/airflow/providers/standard/example_dags/example_python_operator/index.rst.txt
airflow.providers.standard.example_dags.example_python_operator
===============================================================

.. py:module:: airflow.providers.standard.example_dags.example_python_operator

.. autoapi-nested-parse::

   Example DAG demonstrating the usage of the classic Python operators to execute Python functions natively and
   within a virtual environment.



Attributes
----------

.. autoapisummary::

   airflow.providers.standard.example_dags.example_python_operator.log
   airflow.providers.standard.example_dags.example_python_operator.PATH_TO_PYTHON_BINARY


Functions
---------

.. autoapisummary::

   airflow.providers.standard.example_dags.example_python_operator.print_context


Module Contents
---------------

.. py:data:: log

.. py:data:: PATH_TO_PYTHON_BINARY
   :value: '/usr/local/bin/python'


.. py:function:: print_context(ds=None, **kwargs)

   Print the Airflow context and ds variable from the context.


